# cleo-hack

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRACTS.md  Dockerfile  LICENSE  README.md  cleo.config.example.json  llms.txt  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py
agents/cleo/: __init__.py  agent.py  callbacks.py  coder_tools.py  model.py  schemas.py  skills_index.py  toolsets.py
agents/cleo/sub_agents/: __init__.py  actor.py  coder.py  ingestors.py  prioritizer.py  synthesizer.py
app/: __init__.py  api.py  config.py  main.py
cli/: __init__.py  main.py
docs/: ARCHITECTURE.md  CLI.md  CONNECT_ANY_AGENT.md  DEMO.md  GCP_SETUP.md  GET_STARTED.md  PLAN.md  VERIFICATION.md
docs/integration/: coder-wiring.md  skills-wiring.md
docs/submission/: cleo-deck.pptx
docs/submission/src/: deck.js  (+1 more)
mcp_server/: __init__.py  handoff_tools.py  server.py  skill_tools.py  store.py
scripts/: demo_fix_loop.py  live_smoke.py
seed/: __init__.py  seed.py
seed/corpus/: slack-export.json  tickets.json
skills/answer-with-evidence/: SKILL.md
skills/escalate-churn-risk/: SKILL.md
skills/fix-from-feedback/: SKILL.md
skills/triage-feedback/: SKILL.md
skills/write-weekly-brief/: SKILL.md
tests/: test_api.py  test_cli.py  test_config.py  test_handoffs_coder.py  test_mcp_server.py  test_mcp_transport.py  test_seed.py  test_skills.py  test_store.py
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css
workspace/: README.md  __init__.py
workspace/lumen_checkout/: app.py
(+21 files in other folders)
