[project]
name = "cleo-hack"
version = "0.1.0"
description = "Cleo — an autonomous product-feedback operator built on Google ADK + MCP"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.2.0",
    "mcp>=1.0.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
