[project]
name = "cleo-hack"
version = "0.1.0"
description = "Cleo — an autonomous product-feedback operator built on Google ADK + MCP"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.2.0",
    "mcp>=1.0.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
cleo = "cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "app", "cli", "mcp_server", "seed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
